envoy/gke_app_logging/proxy/envoy.yaml
admin:
  access_log_path: "/dev/null"
  address:
    socket_address: { address: 0.0.0.0, port_value: 9901 }

static_resources:
  listeners:
  - name: listener_0
    address:
      socket_address: { address: 0.0.0.0, port_value: 8080 }
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        typed_config:  
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: ingress_http
          access_log:
          - name: envoy.access_loggers.file
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
              path: "/dev/stdout"
              format: "{ \"httpRequest\": { \"status\": \"%RESPONSE_CODE%\", \"requestMethod\": \"%REQ(:METHOD)%\", \"latency\": \"%DURATION%s\", \"responseSize\": \"%BYTES_SENT%\", \"requestUrl\":\"%REQ(X-ENVOY-ORIGINAL-PATH?:PATH)%\", \"remoteIp\": \"%DOWNSTREAM_REMOTE_ADDRESS_WITHOUT_PORT%\", \"userAgent\": \"%REQ(USER-AGENT)%\" }, \"severity\": \"INFO\", \"logging.googleapis.com/trace\": \"%REQ(X-Cloud-Trace-Context)%\" }\n"
          codec_type: AUTO
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains: ["*"]
              routes:
              - match:
                  prefix: "/"
                route: 
                  cluster: app_service
          http_filters:
          - name: envoy.filters.http.router
  clusters:
  - name: app_service
    connect_timeout: 0.25s
    type: strict_dns
    lb_policy: round_robin
    load_assignment:
      cluster_name: app_service
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: 127.0.0.1
                port_value: 10000
